--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
 before_install:
 - go get github.com/mattn/goveralls
 script:
-- "$GOPATH/bin/goveralls -service=travis-ci
+- $GOPATH/bin/goveralls -service=travis-ci
 deploy:
   provider: releases
   skip_cleanup: true
