--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         run: make
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags')
+        # if: startsWith(github.ref, 'refs/tags')
         with:
           files: './gen/dist/*'
           draft: true      
