--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+---
 name: build
 
 on:
@@ -16,9 +17,23 @@ jobs:
           go-version: '^1.17.1'
       - name: Build & Test
         run: make
+      
+
+---
+name: release
+
+on: 
+  push:
+    tags:
+      - 'v*'
+
+jobs:
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Release
         uses: softprops/action-gh-release@v1
-        # if: startsWith(github.ref, 'refs/tags')
         with:
           files: './gen/dist/*'
           draft: true      
