--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,8 @@ jobs:
           go-version: '^1.17.1'
       - name: Build & Test
         run: make
+      - name: Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: './gen/dist/*'
