--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,11 @@ on:
   create:
 
 jobs:
+  test:
+    runs-on: self-hosted
+    steps:
+      - run: echo "Hello"
+
   build:
     runs-on: ubuntu-latest
     steps:
